--- a/client/src/components/Dashboard/NewProject/NewProject.css
+++ b/client/src/components/Dashboard/NewProject/NewProject.css
@@ -29,18 +29,14 @@
   opacity: 0.8;
   width: 100%;
   margin: 20px 0;
-  padding: 20px;
-  text-align: left;
-  padding-left: 40%;
+  padding: 5px 20px;
+  text-align: center;
 }
 
 .admin-form button:hover {
   background: var(--color-2);
 }
 
-.admin-form button i {
-  margin: 0 10px;
-}
 .admin-form form {
   padding: 100px;
   width: 30%;
@@ -49,6 +45,8 @@
 }
 
 .admin-form label {
+  padding-top: 20px;
+  text-transform: capitalize;
   font-size: 24px;
   width: 50%;
   color: var(--color-2);
